--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <div class="info">
             <p>Punkty: <span id="points">0</span></p>
             <p>Poziom: <span id="level">1</span></p>
-            <p>Bonus: <span id="bonus">1.2</span></p>
+            <p>Bonus: <span id="bonus">1.0
+            </span></p>
         </div>
     </div>
     <script src="script.js"></script>
